--- a/node/rtsphtml.html
+++ b/node/rtsphtml.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jsmpeg/0.1/jsmpg.js"></script>
+  <meta charset="UTF-8">
+  <title>Client</title>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmpeg/0.1/jsmpg.js"></script> -->
+  <script src="jsmpeg.0.2.min.js"></script>
 </head>
 <body>
-
-<canvas></canvas>
-
+<div>
+	<canvas id="canvas1"></canvas>
+</div>
 <script>
-var client = new WebSocket('ws://localhost:9999');
-var canvas = document.querySelector('canvas');
-var player = new jsmpeg(client, {
-	canvas: canvas
-});
+window.onload = function(){
+  // 위에서 설정한 스트림 서버 IP: 포트
+  // 글로벌 IP가 설정되어 있다면 글로벌 IP도 이용할 수 있습니다.
+  var client = new WebSocket('ws://192.168.0.xx:11524'); 
+  var canvas = document.querySelector('#canvas1');
+  var player = new jsmpeg(client, {canvas: canvas});
+  // 원본 레졸루션이 1280x720인데 화질이 좋지 않아서
+  // 켄버스 사이즈를 427x240로 줄여서 표시합니다.
+  canvas.style.width  = '427px';
+  canvas.style.height = '240px';
+}
 </script>
 </body>
 </html>
